peering.tf
/* 8. Creating VPC peering */

resource "aws_vpc_peering_connection" "default" {
    count = var.is_peering_requried ? 1 : 0
 
  peer_vpc_id   = data.aws_vpc.default.id #acceptor id
  vpc_id        = aws_vpc.main.id #requestor id

  accepter {
    allow_remote_vpc_dns_resolution = true
  }

  requester {
    allow_remote_vpc_dns_resolution = true
  }

  
 tags = merge( local.common_tags, {
    Name = "${var.project}-${var.environment}-default"
  }
  )
}

resource "aws_route" "peering" {
    count = var.is_peering_requried ? 1 : 0
  route_table_id            = aws_route_table.public.id
  destination_cidr_block    = data.aws_vpc.default.cidr_block
 vpc_peering_connection_id = aws_vpc_peering_connection.default[count.index].id
}
